--- a/evolution/demo.html
+++ b/evolution/demo.html
@@ -31,59 +31,59 @@
                     <img src="img/博丽灵梦.jpg" class="skill_pic"/>
                 </td>
                 <td>
-                    java<br/>
+                    数据仓库<br/>
                     <img src="img/古明地恋.jpg" class="skill_pic"/>
                 </td>
                 <td>
-                    python<br/>
+                    数据开发<br/>
                     <img src="img/十六夜咲夜.jpg" class="skill_pic"/>
                 </td>
             </tr>
             <tr>
                 <td>
-                    hadoop<br/>
+                    数据挖掘<br/>
                     <img src="img/古明地觉.jpg" class="skill_pic"/>
                 </td>
                 <td>
-                    数据仓库<br/>
+                    java<br/>
                     <img src="img/雾雨魔理沙.jpg" class="skill_pic"/>
                 </td>
                 <td>
-                    机器学习<br/>
+                    python<br/>
                     <img src="img/蕾米莉亚·斯卡蕾特.jpg" class="skill_pic"/>
                 </td>
             </tr>
             <tr>
                 <td>
-                    爬虫<br/>
+                    运维<br/>
                     <img src="img/芙兰朵露·斯卡蕾特.jpg" class="skill_pic"/>
                 </td>
                 <td>
-                    linux<br/>
+                    DBA<br/>
                     <img src="img/八云紫.jpg" class="skill_pic"/>
                 </td>
                 <td>
-                    数据库<br/>
+                    网络安全<br/>
                     <img src="img/西行寺幽幽子.jpg" class="skill_pic"/>
                 </td>
             </tr>
             <tr>
                 <td>
-                    战略<br/>
+                    测试<br/>
                     <img src="img/藤原妹红.jpg" class="skill_pic"/>
                 </td>
                 <td>
-                    整理<br/>
+                    规划<br/>
                     <img src="img/爱丽丝·玛格特洛依德.jpg" class="skill_pic"/>
                 </td>
                 <td>
-                    测试<br/>
+                    <br/>
                     <img src="img/射命丸文.jpg" class="skill_pic"/>
                 </td>
             </tr>
             <tr>
                 <td>
-                    安全<br/>
+                    <br/>
                     <img src="img/东风谷早苗.jpg" class="skill_pic"/>
                 </td>
                 <td>
